# SeamStress

./: .gitignore  Makefile  README.md  TODO  align_dataset.py  analyze_all.py  analyze_conformations.py  analyze_embeddings.py  analyze_embeddings_3d.py  benchmark_full.py  benchmark_permutations.py  check_swapping.py  evaluate_alignment_strategy.py  evaluate_alignment_strategy_multiprocess.py  evaluate_dim_red.py  evaluate_features.py  evaluate_reference.py  generate_vmd.py  kde_analysis.py  kde_analysis_plotted_individually.py  main.py  make_combined_scatter_nb.py  mkdocs.yml  plot_combined_scatter.py  print_latex_tables.py  pyproject.toml  quick_align.py  realign_type3_benzene_s0.py  seam_basin_analysis.py  seam_basin_analysis_correspondence.py  verify_swap_effectiveness.py  visualize_alignment.py  write_aligned_mecis.py
.github/workflows/: docs.yml
centroids/: Ethylidene.xyz  H_dissociation.xyz  Type2.xyz  twist.xyz
docs/: algorithm.md  alignment_math.tex  index.md
elisa_spawns/: alignment.py  automorphism.py  cli.py  connectivity.py  geometry.py  io_utils.py  processor.py  rdkit_utils.py
plotting_notebooks/: combined_scatter.ipynb  combined_scatter2.ipynb  dim_red_metrics.ipynb  dm_vs_pop.ipynb  dopt_results.ipynb  feature_metrics.ipynb  plot_embeddings_and_heatmaps.ipynb  sankey_correspondence.ipynb  seam_basin_plots_benzene_s0.ipynb
seam_basin/: basin_meci_table.tex
seamstress/: alignment.py  analysis.py  automorphism.py  cli.py  connectivity.py  geometry.py  io_utils.py  processor.py  rdkit_utils.py
seamstress/styles/: prl.mplstyle
