[project]
name = "elisa-spawns"
version = "0.1.0"
description = "Analyze molecular geometries from XYZ files"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "rdkit>=2025.9.1",
    "scipy>=1.16.2",
    "scikit-learn>=1.6.0",
    "umap-learn>=0.5.7",
    "hdbscan>=0.8.40",
    "matplotlib>=3.10.0",
]

[project.scripts]
elisa-spawns = "elisa_spawns.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["elisa_spawns*"]
exclude = ["data*", "tests*"]
