[project]
name = "seamstress"
version = "0.1.0"
description = "Molecular geometry alignment and dimensionality reduction analysis"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "rdkit>=2024.3.1",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "umap-learn>=0.5",
    "plotly>=5.0",
]

[project.scripts]
seamstress = "seamstress.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["seamstress*"]
exclude = ["data*", "tests*"]
