[project]
name = "seamstress"
version = "0.1.0"
description = "Molecular geometry alignment and dimensionality reduction analysis"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "rdkit>=2024.3.1",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "umap-learn>=0.5",
    "plotly>=5.0",
    "matplotlib>=3.8",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
seamstress = "seamstress.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["seamstress"]
